--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "http://100yen.co.uk/"
   },
   "copyright": "Copyright 2014 100yen",
+  "dependencies": {
+    "serve": "latest"
+  },
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
@@ -18,5 +21,8 @@
     "gulp-shell": "^0.2.11",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-util": "^3.0.1"
+  },
+  "scripts": {
+    "start": "serve ./"
   }
 }
