--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "100yen",
-  "version": "100.0.0",
   "author": {
     "email": "jonic@100yen.co.uk",
     "name": "Jonic Linley",
@@ -11,18 +9,33 @@
     "serve": "latest"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.0.0",
-    "gulp-coffee": "^2.2.0",
-    "gulp-concat": "^2.4.3",
-    "gulp-notify": "^2.1.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.2.4",
-    "gulp-shell": "^0.2.11",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-util": "^3.0.1"
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^7.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-bump": "^2.4.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-header": "^1.8.8",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "require-reload": "^0.2.2"
+  },
+  "name": "100yen",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RaspberryPiFoundation/Pica.git"
   },
   "scripts": {
     "start": "serve ./"
-  }
+  },
+  "version": "100.0.0"
 }
