--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "name": "100yen",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RaspberryPiFoundation/Pica.git"
+    "url": "git+https://github.com/Jonic/100yen.co.uk.git"
   },
   "scripts": {
     "start": "serve ./"
