--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "name": "Jonic Linley",
     "url": "http://100yen.co.uk/"
   },
-  "copyright": "Copyright 2014 100yen",
+  "copyright": "Copyright 2017 Jonic Linley",
   "dependencies": {
     "serve": "latest"
   },
   "engines": {
-    "node": "7.x.x"
+    "node": "8.x.x"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
