--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "author": {
-    "email": "jonic@100yen.co.uk",
-    "name": "Jonic Linley",
-    "url": "http://100yen.co.uk/"
-  },
-  "copyright": "Copyright 2017 Jonic Linley",
+  "name": "gatsby-starter-default",
+  "description": "Gatsby default starter",
+  "version": "1.0.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "serve": "latest"
+    "gatsby": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0"
   },
-  "engines": {
-    "node": "8.x.x"
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write 'src/**/*.js'",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^2.7.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-header": "^1.8.8",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "require-reload": "^0.2.2"
+    "prettier": "^1.12.0"
   },
-  "name": "100yen",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jonic/100yen.co.uk.git"
-  },
-  "scripts": {
-    "start": "serve ./"
-  },
-  "version": "100.0.0"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  }
 }
