--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "100yen",
+  "description": "My personal site",
+  "version": "2019.0.0",
+  "author": "Jonic <jonic@100yen.co.uk>",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -21,10 +11,53 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
+    "babel-preset-gatsby": "^0.1.11",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.7.1",
+    "jest-environment-enzyme": "^7.0.2",
+    "jest-environment-jsdom": "^24.7.1",
+    "jest-environment-jsdom-global": "^1.2.0",
+    "jest-enzyme": "^7.0.2",
+    "jest-fetch-mock": "^2.1.2",
+    "jest-plugin-context": "^2.9.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0",
+    "prettier-package-json": "^2.1.0",
+    "prettier-stylelint": "^0.4.2",
+    "react-test-renderer": "^16.8.6",
+    "sass": "^1.18.0",
+    "stylelint": "^10.0.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-order": "^2.2.1",
+    "stylelint-scss": "^3.5.4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/jonic/100yen.co.uk"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.5.1",
+    "classnames": "^2.2.6",
+    "dotenv": "^7.0.0",
+    "gatsby": "^2.3.22",
+    "gatsby-image": "^2.0.38",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^5.0.0"
   }
 }
