Configured, like… everything

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,14 @@
 
 [build.environment]
   NODE_PATH = "./src"
-  REACT_APP_GA_ID = "UA-85981-5"
+  REACT_APP_GOOGLE_ANALYTICS_ID = "UA-12345678-9"
+  REACT_APP_GOOGLE_VERIFICATION = "whatevs"
+
+[context.production.environment]
   REACT_APP_GOOGLE_VERIFICATION = "EJOTQWsVwuMA6tjtdmDXM0v8ejx4G12gMnu9MKnT5f4"
-  REACT_APP_TYPEKIT_ID = "tgw1nyv"
+  REACT_APP_GA_ID = "UA-85981-5"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Clacks-Overhead = "GNU Terry Pratchett"
