--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "100yen",
   "description": "My personal site",
   "version": "2019.0.0",
@@ -8,7 +9,12 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/. --ext .js; exit 0;",
+    "lint-fix": "eslint src/. --ext .js --fix; exit 0;",
+    "lint:staged": "lint-staged",
+    "start": "gatsby serve",
+    "test": "jest --notify --runInBand --watchAll",
+    "test-coverage": "jest --coverage --runInBand"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -53,11 +59,31 @@
     "dotenv": "^7.0.0",
     "gatsby": "^2.3.22",
     "gatsby-image": "^2.0.38",
+    "gatsby-plugin-netlify-cms": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
+    "netlify-cms": "^2.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0"
-  }
+  },
+  "engines": {
+    "node": "10.15.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.scss": [
+      "stylelint --fix --syntax=scss",
+      "git add"
+    ],
+    "package.json": [
+      "prettier-package-json --write",
+      "git add"
+    ]
+  },
+  "pre-commit": "lint:staged"
 }
