Authenticating with github

--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: test-repo
+  name: github
+  repo: jonic/100yen.co.uk
+  branch: dreamy
 
+publish_mode: editorial_workflow
 media_folder: static/assets
 public_folder: assets
 
