--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ insert_final_newline = true
 max_line_length = 80
 trim_trailing_whitespace = true
 
+[*.php]
+indent_size = 4
+
 [COMMIT_EDITMSG]
 max_line_length = 0
