--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "jest-environment-enzyme": "^7.1.2",
     "jest-environment-jsdom": "^26.0.1",
