--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "lint:staged": "lint-staged",
-    "start": "gatsby develop",
-    "test": "jest --notify --runInBand --watchAll",
-    "test-coverage": "jest --coverage --runInBand"
+    "build": "",
+    "start": ""
   },
   "repository": {
     "type": "git",
@@ -25,25 +22,11 @@
   "pre-commit": "lint:staged",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.13.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
-    "jest-environment-enzyme": "^7.1.2",
-    "jest-environment-jsdom": "^26.0.1",
-    "jest-environment-jsdom-global": "^2.0.2",
-    "jest-enzyme": "^7.1.2",
-    "jest-plugin-context": "^2.9.0",
     "lint-staged": "^10.2.2",
-    "netlify-cli": "^2.51.0",
     "prettier": "^2.0.5",
     "prettier-package-json": "^2.1.3",
     "prettier-stylelint": "^0.4.2",
@@ -56,23 +39,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.21.33",
-    "gatsby-image": "^2.4.3",
-    "gatsby-link": "^2.4.2",
-    "gatsby-plugin-google-gtag": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-json": "^2.4.2",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.2.0"
+    "dotenv": "^8.2.0"
   }
 }
