--- a/package.json
+++ b/package.json
@@ -21,24 +21,33 @@
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
+    "@babel/register": "^7.10.1",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.0.0",
+    "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-strip-css-comments": "^2.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.2.7",
+    "postcss-object-fit-images": "^1.1.2",
     "prettier": "^2.0.5",
     "prettier-package-json": "^2.1.3",
     "prettier-stylelint": "^0.4.2",
-    "sass": "^1.26.5",
-    "stylelint": "^13.3.3",
+    "sass": "^1.26.7",
+    "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.17.2"
   },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "dotenv": "^8.2.0"
-  }
+  "dependencies": {}
 }
