--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,7 @@
   "extends": [
     "./node_modules/prettier-stylelint/config.js",
     "stylelint-config-standard",
+    "stylelint-config-recommended-scss"
   ],
   "plugins": [
     "stylelint-order",
